Rename character components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,6 @@
   </nav>
 
   <main>
-    <app-characters [query]="query$ | async"></app-characters>
+    <app-character-list [query]="query$ | async"></app-character-list>
   </main>
 </div>
