--- a/src/app/character-list/character-list.component.html
+++ b/src/app/character-list/character-list.component.html
@@ -1,3 +1,11 @@
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark w-100">
+  <a class="navbar-brand mr-auto" href="/">R&M</a>
+
+  <form [formGroup]="form" class="form-inline my-2">
+    <input formControlName="query" class="form-control mr-2 col-sm-12" type="text" id="characterName" placeholder="Character name">
+  </form>
+</nav>
+
 <div class="characters-container" *ngIf="characters && ((loading$ | async) === false)">
   <ng-container *ngFor="let character of characters.results">
     <app-character-card [character]="character"></app-character-card>
