--- a/src/app/character-card/character-card.component.html
+++ b/src/app/character-card/character-card.component.html
@@ -1,9 +1,11 @@
 <div class="character-card">
   <div class="character-image border shadow-sm rounded">
     <img src="{{character.image}}" alt="not found" width="250" height="250">
-    
+
     <div class="character-description">
-      <h3>{{character.name}}</h3>
+      <h3>
+        <a [routerLink]="['/characters', character.id]">{{character.name}}</a>
+      </h3>
 
       <span>id: {{character.id}} - created {{createdDate}}</span>
     </div>
