--- a/src/app/character-list/character-list.component.html
+++ b/src/app/character-list/character-list.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark w-100">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark w-100 position-fixed">
   <a class="navbar-brand mr-auto" href="/">R&M</a>
 
   <form [formGroup]="form" class="form-inline my-2">
