--- a/src/app/character/components/character-card/character-card.component.html
+++ b/src/app/character/components/character-card/character-card.component.html
@@ -1,6 +1,6 @@
 <div class="character-card">
   <div class="character-image border shadow-sm rounded">
-    <img src="{{character.image}}" alt="not found" width="250" height="250">
+    <img src="{{character.image}}" alt="not found" width="250" height="250" />
 
     <div class="character-description">
       <h3>
@@ -42,6 +42,13 @@
       <div class="character-detail">
         <span>Area</span>
         <span class="character-property text-success" title="{{character.origin.name}}">{{character.location.name}}</span>
+      </div>
+    </ng-container>
+
+    <ng-container *ngIf="character.episode && character.episode.length">
+      <div class="character-detail">
+        <span></span>
+        <button (click)="viewEpisodes(character)" class="btn btn-warning">View episodes</button>
       </div>
     </ng-container>
   </div>
